Closed
Bug 114706
Opened 24 years ago
Closed 23 years ago
resizing window only triggers events if horizontally resized
Categories
(Core :: Layout: Tables, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.0.1
People
(Reporter: dodger, Assigned: karnaze)
References
()
Details
(Keywords: testcase, Whiteboard: PATCH [FIXED_ON_TRUNK])
Attachments
(3 files, 1 obsolete file)
|
308 bytes,
text/html
|
Details | |
|
188 bytes,
text/html
|
Details | |
|
867 bytes,
patch
|
alexsavulov
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9.6) Gecko/20011120
BuildID: 2001112009
When resizing a window, TABLEs with height set and specified as a percentage
should redraw with the window to maintain a constant percentage.
Instead, when the page is resized horizontally, the table resizes but if only
the vertical aspect of the window is changed, the table does not redraw.
Reproducible: Always
Steps to Reproduce:
1.load page www.perl5cgi.com (or org or net)
2.change horizontal aspect of window
3.change vertical aspect without changing horizontal aspect (i.e. drag up and
down on the bottom resize handle of the window).
Actual Results: 1.page loaded
2.table redrew
3.nothing -- table did not redraw (thus leaving a large orange expanse at the
bottom when enlarged, or unnecessary scrollbars when shrunk)
Expected Results: 1.page loaded
2.table redrew
3.table should have redrawn
Support for table height tags is a more recent feature.
This feature requires the ability to detect a change in the vertical aspect of
the page. It appears that while the support for the tag property has been added,
redrawing support has not. The fact that a table properly resizes when the
horizontal aspect is changed seems to be a byproduct of the requirement that
percentage WIDTH properties require a redraw on resize, but would not need code
to detect a vertical resize.
Comment 1•24 years ago
|
||
confirming. making the page shorter reflows correctly, but making it taller
does live an orange stripe at the bottom.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•24 years ago
|
||
Comment 3•24 years ago
|
||
It doesn't even need nested tables. What it does need is the TD to have a
height property. Having only the height in table or putting it in TR doesn't
cause the problem.
The original page I noted this on -- www.perl5cgi.com -- does not contain height
tags in the TRs or TDs at all. It only has 100% height tags on the outer and
second tables (the innermost table has no formatting applied to it and does not
appear to cause any issues as it fits to its contents).
In my Mozilla the reducing the vertical aspect doesn't work, either. The effect
of reduced test case #1 is as follows:
The outermost table reflows properly. This means the space between the top
and bottom borders of the outer table and the top and bottom borders of the
inner table increase as the page is enlarged vertically.
The innermost table does not reflow unless the horizontal aspect is changed.
Thus, the page gains a scrollbar and does not fit on the screen.
| Assignee | ||
Comment 5•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Keywords: testcase
Priority: -- → P2
Whiteboard: PATCH
Target Milestone: --- → mozilla0.9.8
Comment 6•24 years ago
|
||
Comment on attachment 61958 [details] [diff] [review]
patch to fix the bug
r= alexsavulov
Comment 7•24 years ago
|
||
Comment on attachment 61958 [details] [diff] [review]
patch to fix the bug
sr=attinasi
Attachment #61958 -
Flags: superreview+
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.9 → mozilla1.0.1
| Assignee | ||
Comment 9•23 years ago
|
||
The previous patch is obsolete, since percent height caluclations have changed
a lot since then.
| Assignee | ||
Updated•23 years ago
|
Attachment #61958 -
Attachment is obsolete: true
Comment 10•23 years ago
|
||
Attachment #88335 -
Flags: superreview+
Comment 11•23 years ago
|
||
Comment on attachment 88335 [details] [diff] [review]
patch to fix the bug
r= alexsavulov
Attachment #88335 -
Flags: review+
| Assignee | ||
Comment 12•23 years ago
|
||
The patch is in the trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: PATCH → PATCH [FIXED_ON_TRUNK]
Comment 13•23 years ago
|
||
*** Bug 118675 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•