bug 114706 - only use last height as desired size if a special reflow occurred during an incremental reflow. sr=kin